[gd_scene load_steps=6 format=2]

[ext_resource path="res://game_objects/actors/characters/enemy/Basic_Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_objects/actors/characters/enemy/Deku_Scrub.gd" type="Script" id=2]
[ext_resource path="res://game_objects/primitive/Area.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 521.036

[sub_resource type="CircleShape2D" id=2]
radius = 217.916

[node name="Deku_Scrub" index="0" instance=ExtResource( 1 )]

[node name="Body" parent="." index="0"]
script = ExtResource( 2 )
actor_id = "Creature"
heavy = true
move_speed = 0.0
gravity_force = 0.0
ground_friction = 0.0
air_friction = 0.0
bounciness = 0.3
creature_name = "Deku Scrub"

[node name="Stats" parent="Body" index="8"]
max_health_points = 7.0
attack_power = 125.0

[node name="Shoot_Proximity" parent="Body" index="10" instance=ExtResource( 3 )]

[node name="Area_Shape" parent="Body/Shoot_Proximity" index="0"]
shape = SubResource( 1 )

[node name="Z_Axis" parent="Body/Shoot_Proximity" index="1"]
position = Vector2( 0, 91.2001 )

[node name="Z_Height" parent="Body/Shoot_Proximity/Z_Axis" index="0"]
position = Vector2( 0, -281.2 )

[node name="Hide_Proximity" parent="Body" index="11" instance=ExtResource( 3 )]

[node name="Area_Shape" parent="Body/Hide_Proximity" index="0"]
shape = SubResource( 2 )

[node name="Z_Axis" parent="Body/Hide_Proximity" index="1"]
position = Vector2( 0, 93.1002 )

[node name="Z_Height" parent="Body/Hide_Proximity/Z_Axis" index="0"]
position = Vector2( 0, -283.1 )


[editable path="Body/Hurtbox"]

[editable path="Body/Hurtbox/Z_Axis"]

[editable path="Body/Stats"]

[editable path="Body/Z_Axis"]

[editable path="Body/Shoot_Proximity"]

[editable path="Body/Shoot_Proximity/Z_Axis"]

[editable path="Body/Hide_Proximity"]

[editable path="Body/Hide_Proximity/Z_Axis"]
